--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ footer {
   height: 2.5rem;
 }
 
-.text-block-1 {
+/* .text-block-1 {
   position: absolute;
   top: 1%;
   left: 5%;
@@ -104,4 +104,4 @@ footer {
   color: white;
   padding-left: 20px;
   padding-right: 20px;
-} 
+}  */
